manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "rafoclusteraks-f2fa"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "rafoclusteraks-f2fa"
  template:
    metadata:
      labels:
        app: "rafoclusteraks-f2fa"
    spec:
      containers:
        - name: "rafoclusteraks-f2fa"
          image: "rafodelmalcontainerregistry.azurecr.io/rafoclusteraks"
          ports:
          - containerPort: 80
